--- a/templates/layouts/default.gohtml
+++ b/templates/layouts/default.gohtml
@@ -7,6 +7,8 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
       <title>{{ .Title }}</title>
+
+      <link href="/css/main.css" rel="stylesheet" />
     </head>
     <body>
       {{- template "components/layout/header" . -}}
