feat: Add a basic layout

--- a/templates/components/layout/header.gohtml
+++ b/templates/components/layout/header.gohtml
@@ -1,3 +1,7 @@
 {{- define "components/layout/header" -}}
-  <header>HEADER</header>
+  <link href="/css/header.css" rel="stylesheet" />
+
+  <header>
+    <h1>GoFutz</h1>
+  </header>
 {{- end -}}
