--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,8 +8,16 @@
   margin: 0;
 }
 
+html {
+  height: 100%;
+}
+
 body {
+  background-color: #1e2939;
+  color: white;
+  display: grid;
   font-family: sans-serif;
+  min-height: 100%;
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
 }
@@ -51,4 +59,20 @@ h4,
 h5,
 h6 {
   text-wrap: balance;
+}
+
+.layout--default {
+  grid-template-areas:
+    "header header header"
+    "coverage-bar coverage-bar coverage-bar"
+    "sidebar content content"
+    "sidebar footer footer";
+  grid-template-columns: min(16rem, 50%) 1fr 1fr;
+  grid-template-rows: 4rem 0.5rem 1fr min(16rem, calc(50vh - 4.5rem));
+}
+
+#main-content {
+  box-shadow: 0 0 0.5rem 0 rgb(0, 0, 0, 0.5) inset;
+  grid-area: content;
+  padding: 1rem;
 }
