--- a/templates/components/layout/footer.gohtml
+++ b/templates/components/layout/footer.gohtml
@@ -1,3 +1,5 @@
 {{- define "components/layout/footer" -}}
+  <link href="/css/footer.css" rel="stylesheet" />
+
   <footer>FOOTER</footer>
 {{- end -}}
