feat: Add a websocket handler

--- a/templates/layouts/default.gohtml
+++ b/templates/layouts/default.gohtml
@@ -30,6 +30,8 @@
       </main>
 
       {{- template "components/layout/footer" . -}}
+
+      <script src="/js/ws.js"></script>
     </body>
   </html>
 {{- end -}}
