feat: Add logic to display test files and tests in the sidebar

--- a/templates/components/layout/sidebar.gohtml
+++ b/templates/components/layout/sidebar.gohtml
@@ -1,5 +1,15 @@
 {{- define "components/layout/sidebar" -}}
   <link href="/css/sidebar.css" rel="stylesheet" />
 
-  <aside class="sidebar">SIDEBAR</aside>
+  <aside class="sidebar">
+    <div class="sidebar__header">
+    SIDEBAR HEADER
+    </div>
+
+    <div class="sidebar__tests">
+      SIDEBAR TESTS
+    </div>
+  </aside>
+
+  <script src="/js/sidebar.js"></script>
 {{- end -}}
