--- a/templates/layouts/default.gohtml
+++ b/templates/layouts/default.gohtml
@@ -29,6 +29,8 @@
 {{- define "layouts/default/foot" -}}
       </main>
 
+      <script src="/js/main-content.js"></script>
+
       {{- template "components/layout/footer" . -}}
 
       <script src="/js/ws.js"></script>
