--- a/templates/components/layout/sidebar.gohtml
+++ b/templates/components/layout/sidebar.gohtml
@@ -3,12 +3,10 @@
 
   <aside class="sidebar">
     <div class="sidebar__header">
-    SIDEBAR HEADER
+      <button class="btn__run-tests" title="Run all tests"></button>
     </div>
 
-    <div class="sidebar__tests">
-      SIDEBAR TESTS
-    </div>
+    <div class="sidebar__tests"></div>
   </aside>
 
   <script src="/js/sidebar.js"></script>
