--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -48,10 +48,16 @@
 }
 
 .sidebar__tests--file {
-  padding-block-end: 0.25rem;
+  padding-block-end: 0.5rem;
 }
 
-.sidebar__tests--file-summary {
+.sidebar__tests--file-container {
+  display: flex;
+  gap: 1rem;
+  justify-content: space-between;
+}
+
+.sidebar__tests--file-title {
   cursor: pointer;
   direction: rtl;
   list-style: none;
@@ -63,13 +69,13 @@
   white-space: nowrap;
 }
 
-[dir="rtl"] .sidebar__tests--file-summary {
+[dir="rtl"] .sidebar__tests--file-title {
   direction: ltr;
   text-align: right;
 }
 
 .sidebar__tests--tests {
-  padding-block: 0.25rem;
+  padding-block-end: 0.25rem;
   padding-inline-start: 1.25rem;
 }
 
@@ -80,5 +86,16 @@
 }
 
 .sidebar__tests--test {
+  color: #cad5e2;
+  display: flex;
+  gap: 1rem;
+  justify-content: space-between;
   list-style: none;
+}
+
+.sidebar__tests--file-coverage,
+.sidebar__tests--test-coverage {
+  color: #cad5e2;
+  width: 3.8rem;
+  text-align: end;
 }
