refactor: Change some logic around to show actual functions instead of test functions

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -110,3 +110,11 @@ h6 {
   tab-size: 4;
   white-space: pre;
 }
+
+.covered {
+  background-color: #05df7222;
+}
+
+.uncovered {
+  background-color: #ff646722;
+}
