feat: Add an overall coverage percentage

--- a/assets/css/coverage-bar.css
+++ b/assets/css/coverage-bar.css
@@ -6,6 +6,7 @@
 .coverage-bar > .covered {
   background-color: #016630;
   transition: width 0.5s;
+  width: 0%;
 }
 
 .coverage-bar > .uncovered {
