--- a/templates/components/layout/coverage-bar.gohtml
+++ b/templates/components/layout/coverage-bar.gohtml
@@ -5,4 +5,6 @@
     <div class="covered"></div>
     <div class="uncovered"></div>
   </aside>
+
+  <script src="/js/coverage-bar.js"></script>
 {{- end -}}
