--- a/templates/components/layout/sidebar.gohtml
+++ b/templates/components/layout/sidebar.gohtml
@@ -4,6 +4,8 @@
   <aside class="sidebar">
     <div class="sidebar__header">
       <button class="btn__run-tests" title="Run all tests"></button>
+
+      <div class="coverage"></div>
     </div>
 
     <div class="sidebar__tests"></div>
