--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -6,9 +6,11 @@
 }
 
 .sidebar__header {
+  align-items: center;
   background-color: #030712;
   border-block-end: 1px solid #364153;
   display: flex;
+  font-size: 1.25rem;
   gap: 1rem;
   inset-block-start: 0;
   justify-content: space-between;
