feat: Disable the "Run all tests" button when tests are running

--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -32,6 +32,11 @@
     color 0.2s;
 }
 
+.btn__run-tests:disabled {
+  cursor: not-allowed;
+  opacity: 50%;
+}
+
 .btn__run-tests::after {
   color: #99a1af;
   content: "▶";
