--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -59,14 +59,25 @@
 
 .sidebar__tests {
   padding: 1rem;
+  padding-inline-start: calc(0.5rem + 1px);
 }
 
 .sidebar__tests--file {
-  padding-block-end: 0.5rem;
+  border-left: 2px solid transparent;
+  border-radius: 0.25rem;
+  cursor: pointer;
+  margin-block-end: 0.5rem;
+  margin-inline-start: -1px;
+  padding-inline-start: calc(0.5rem + 1px);
+}
+
+.sidebar__tests--file.open {
+  border-left-color: #5c6e87;
 }
 
 .sidebar__tests--file-container {
   display: flex;
+  font-weight: bold;
   gap: 1rem;
   justify-content: space-between;
 }
@@ -103,7 +114,6 @@
 }
 
 .sidebar__tests--file-title {
-  cursor: pointer;
   direction: rtl;
   list-style: none;
   max-width: 100%;
@@ -121,7 +131,7 @@
 
 .sidebar__tests--tests {
   padding-block-end: 0.25rem;
-  padding-inline-start: 1.25rem;
+  padding-inline-start: 2.4rem;
 }
 
 .sidebar__tests--tests:empty::after {
@@ -136,6 +146,12 @@
   gap: 1rem;
   justify-content: space-between;
   list-style: none;
+}
+
+.sidebar__tests--test-item {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .sidebar__tests--file-coverage,
