--- a/templates/components/layout/sidebar.gohtml
+++ b/templates/components/layout/sidebar.gohtml
@@ -8,7 +8,7 @@
       <div class="coverage"></div>
     </div>
 
-    <div class="sidebar__tests"></div>
+    <div class="sidebar__tests" tabindex="0"></div>
   </aside>
 
   <script src="/js/sidebar.js"></script>
