refactor: Move CSS colours to custom properties

--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -1,6 +1,6 @@
 footer {
-  background-color: #18181b;
-  border-top: 0.5rem solid #09090b;
+  background-color: var(--color-footer-background);
+  border-top: 0.5rem solid var(--color-footer-border);
   grid-area: footer;
   padding: 1rem;
 }
