--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -7,6 +7,7 @@
 
 .sidebar__header {
   align-items: center;
+  background-color: var(--color-sidebar-background);
   border-block-end: 1px solid var(--color-sidebar-border);
   display: flex;
   font-size: 1.25rem;
@@ -116,6 +117,7 @@
 .sidebar__tests--file-title {
   direction: rtl;
   list-style: none;
+  margin-inline-start: auto;
   max-width: 100%;
   overflow: hidden;
   text-align: left;
