--- a/templates/components/layout/footer.gohtml
+++ b/templates/components/layout/footer.gohtml
@@ -1,5 +1,9 @@
 {{- define "components/layout/footer" -}}
   <link href="/css/footer.css" rel="stylesheet" />
 
-  <footer>FOOTER</footer>
+  <footer>
+    <pre class="footer__output"></pre>
+  </footer>
+
+  <script src="/js/footer.js"></script>
 {{- end -}}
