refactor: Keep a global list of files in the frontend for easier updating

--- a/templates/layouts/default.gohtml
+++ b/templates/layouts/default.gohtml
@@ -33,6 +33,7 @@
 
       {{- template "components/layout/footer" . -}}
 
+      <script src="/js/test-data.js"></script>
       <script src="/js/ws.js"></script>
     </body>
   </html>
