feat: Add the page title to the header

--- a/templates/components/layout/header.gohtml
+++ b/templates/components/layout/header.gohtml
@@ -2,6 +2,6 @@
   <link href="/css/header.css" rel="stylesheet" />
 
   <header>
-    <h1>GoFutz</h1>
+    <h1>{{ .Title }}</h1>
   </header>
 {{- end -}}
