--- a/templates/components/layout/sidebar.gohtml
+++ b/templates/components/layout/sidebar.gohtml
@@ -21,6 +21,13 @@
       <div class="coverage"></div>
     </div>
 
+    <div class="sidebar__search">
+      <input name="q" placeholder="Search..." type="search">
+      <button class="btn__search-clear" type="button" title="Clear search">
+        ×
+      </button>
+    </div>
+
     <div class="sidebar__tests" tabindex="0"></div>
   </aside>
 
