feat: Add a dashboard when no file is selected

--- a/templates/components/layout/sidebar.gohtml
+++ b/templates/components/layout/sidebar.gohtml
@@ -10,7 +10,7 @@
           {{- range .SortOptions -}}
             <option
               value="{{- .Value -}}"
-              {{- if eq $.SelectedSortOption .Value -}}selected{{- end -}}
+              {{- if eq $.SelectedSortOption .Value }} selected{{- end -}}
             >
               {{- .Label -}}
             </option>
