--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -127,6 +127,74 @@ h6 {
   transform: translateY(-50%);
 }
 
+#dashboard-container {
+  align-items: center;
+  display: flex;
+  height: 100%;
+  justify-content: center;
+}
+
+.dashboard {
+  padding: 1rem 2rem;
+  display: block;
+  max-width: 50rem;
+  margin: 0 auto;
+  width: 100%;
+}
+
+.dashboard__widgets {
+  display: flex;
+  gap: 2rem;
+}
+
+.dashboard__widget {
+  background-color: var(--color-sidebar-background);
+  border: 1px solid var(--color-sidebar-border);
+  border-radius: 1rem;
+  box-shadow: 0 0 0.5rem 0 rgb(0, 0, 0, 0.25);
+  padding: 1.5rem;
+  width: 100%;
+}
+
+.dashboard__widget h3 {
+  border-block-end: 1px solid var(--color-sidebar-border);
+  color: var(--color-foreground);
+  font-size: 1.25rem;
+  font-weight: 600;
+  margin: 0 0 1rem 0;
+  padding-block-end: 1rem;
+}
+
+.widget__stats {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.stat {
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+}
+
+.stat__label {
+  color: var(--color-sidebar-foreground);
+  font-size: 0.9rem;
+}
+
+.stat__value {
+  color: var(--color-foreground);
+  font-weight: 600;
+  font-size: 1.1rem;
+}
+
+.status {
+  display: flex;
+  align-items: center;
+  font-size: 1rem;
+  font-weight: 600;
+}
+
 .file-path {
   background-color: var(--color-background);
   border-block-end: 1px solid var(--color-sidebar-border);
