--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -92,10 +92,44 @@
   width: 4.75rem;
 }
 
-.sidebar__search {
+.sidebar__search--wrapper {
+  align-items: center;
   border-block-end: 1px solid var(--color-sidebar-border);
+  display: flex;
+  gap: 1rem;
+  padding: 1rem;
+}
+
+.btn__home {
+  background-color: transparent;
+  border: 2px solid var(--color-btn);
+  border-radius: 50%;
+  cursor: pointer;
   padding: 1rem;
   position: relative;
+  transition:
+    border-color 0.2s,
+    color 0.2s;
+}
+
+.btn__home:disabled {
+  cursor: not-allowed;
+  opacity: 0.5;
+}
+
+.btn__home::after {
+  color: var(--color-btn);
+  content: "🏠";
+  font-size: 1rem;
+  inset: 50% 0 0 50%;
+  line-height: 1;
+  position: absolute;
+  transform: translate(-50%, -50%);
+}
+
+.sidebar__search {
+  position: relative;
+  width: 100%;
 }
 
 .sidebar__search input {
@@ -118,7 +152,7 @@
   color: var(--color-sidebar-foreground);
   cursor: pointer;
   font-size: 1.25rem;
-  inset-inline-end: 1.5rem;
+  inset-inline-end: 0.5rem;
   opacity: 0;
   padding: 0.25rem;
   position: absolute;
