--- a/templates/components/layout/sidebar.gohtml
+++ b/templates/components/layout/sidebar.gohtml
@@ -21,11 +21,15 @@
       <div class="coverage"></div>
     </div>
 
-    <div class="sidebar__search">
-      <input name="q" placeholder="Search..." type="search" autocomplete="off">
-      <button class="btn__search-clear" type="button" title="Clear search query">
-        ×
-      </button>
+    <div class="sidebar__search--wrapper">
+      <button class="btn__home" title="Go to the homepage"></button>
+
+      <div class="sidebar__search">
+        <input name="q" placeholder="Search..." type="search" autocomplete="off">
+        <button class="btn__search-clear" type="button" title="Clear search query">
+          ×
+        </button>
+      </div>
     </div>
 
     <div class="sidebar__tests"></div>
