--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -220,7 +220,9 @@
 
 /* Failed */
 .sidebar__tests--file-status.status-3::after {
-  content: "❌";
+  background-color: var(--color-coverage-bar-uncovered);
+  mask: url("/svg/x.svg") no-repeat center;
+  content: "";
 }
 
 /* No Tests */
