--- a/templates/components/layout/dashboard.gohtml
+++ b/templates/components/layout/dashboard.gohtml
@@ -21,9 +21,9 @@
       <h3>Status</h3>
       <div class="status">
         {{ if .DashboardData.IsRunning }}
-          <span class="status__running">🔄 Running...</span>
+          <span class="status__running">Running...</span>
         {{ else }}
-          <span class="status__idle">⏸️ Idle</span>
+          <span class="status__idle">Idle</span>
         {{ end }}
       </div>
     </div>
