feat: Add preloading for the icons

--- a/templates/layouts/default.gohtml
+++ b/templates/layouts/default.gohtml
@@ -2,13 +2,7 @@
   <!doctype html>
   <html lang="en">
     <head>
-      <meta charset="UTF-8" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
-      <title>{{ .Title }}</title>
-
-      <link href="/css/main.css" rel="stylesheet" />
+      {{- template "components/layout/head" . -}}
     </head>
     <body class="layout--default">
       {{- template "components/layout/header" . -}}
