fix: Rename "Total Tests" to "Total Files"

--- a/templates/components/layout/dashboard.gohtml
+++ b/templates/components/layout/dashboard.gohtml
@@ -9,7 +9,7 @@
           <span class="stat__value stat__value--coverage">…%</span>
         </div>
         <div class="stat">
-          <span class="stat__label">Total Tests</span>
+          <span class="stat__label">Total Files</span>
           <span class="stat__value stat__value--total">
             {{- .DashboardData.TotalTests -}}
           </span>
